# contradictions-api

./: .env.example  .gitignore  CLAUDE.md  Justfile  README.md  contradictions-api.code-workspace  docker-compose.yml  ruff.toml  test.http
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py  utils.py
backend/app/api/: main.py
backend/app/api/routes/: contradictions.py  parameters.py  patents.py  principles.py  utils.py
backend/app/core/: config.py  llm.py  logging.py  ocr.py  vectors.py
backend/app/data/: parameters.json
backend/app/prompts/: __init__.py  prompt_manager.py
backend/app/prompts/templates/: PatentContentParser.j2  PatentMetaParser.j2  extract_tc_from_text.j2
backend/app/schemas/: contradictions.py  parameters.py  patents.py  principles.py
backend/app/services/: contradictions.py  parameters.py  patents.py  principles.py
data/: matrix_values.csv  principles.json
demo/: demo.http  patent.json
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py
mcp-server/app/: server.py
mcp-server/app/core/: config.py  logging.py
mcp-server/app/tools/: contradictions.py
mcp-server/app/utils/: http.py
